[Build] Migrate to JDK 21. Part 5/11
`--release` restricts the platform to the API of the target release,
which contains no `sun.misc`, `jdk.jfr` or `java.lang.foreign`. Pin the
modules that use them to the JDK they target, and rewrite `VMCounters`
onto public JMX APIs instead of pinning half of the test infrastructure.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>